feat: 替换被废弃方法